--- a/app.json
+++ b/app.json
@@ -1,26 +1,26 @@
 {
   "id": "9daf8b1e-5ab4-4e5e-831f-893803e91660",
   "name": "Deposit",
-  "publisher": "DSVC Business Solutions Ltd.",
+  "publisher": "Triple P Application Co., Ltd.",
   "version": "1.0.0.0",
   "brief": "Deposit",
   "description": "App for Deposit",
-  "privacyStatement": "https://dsvc.pro/legal/privacy_policy.html",
-  "EULA": "https://dsvc.pro/legal/EULA.html",
-  "help": "https://dsvc.pro/help/",
-  "url": "https://dsvc.pro/",
-  "logo": "logo.png",
+  "privacyStatement": "",
+  "EULA": "",
+  "help": "",
+  "url": "",
+  "logo": "",
   "dependencies": [
     {
-      "id": "f512c58a-6c13-4c3d-87a1-b9aa3ee16f6b",
-      "name": "DSVC Thailand Localization",
-      "publisher": "DSVC Business Solutions Ltd.",
-      "version": "1.0.0.13"
-    }
+      "id": "178095c4-e347-4167-9a3e-21a02215bf85",
+      "publisher": "Triple P Application Co., Ltd.",
+      "version": "24.0.0.1",
+      "name": "Tax localization for Thailand (VAT & WHT)"
+  }
   ],
   "screenshots": [],
   "platform": "1.0.0.0",
-  "application": "18.0.0.0",
+  "application": "24.0.0.0",
   "features": ["TranslationFile"],
   "idRanges": [
     {
@@ -28,10 +28,11 @@
       "to": 70599
     }
   ],
-  "resourceExposurePolicy": {"allowDebugging": false,"allowDownloadingSource": false,"includeSourceInSymbolFile": false},
-  "contextSensitiveHelpUrl": "https://dsvc.pro/help/",
-  "runtime": "8.0",
-  "target": "Cloud",
-  "supportedLocales": ["en-US"],
-  "suppressWarnings": ["AA0072","AA0232","AL0432","AL0667","AW0011"]
+  "resourceExposurePolicy": {
+    "allowDebugging": true,
+    "allowDownloadingSource": false,
+    "includeSourceInSymbolFile": true
+  },
+  "runtime": "13.0",
+  "target": "Cloud"
 }
